--- a/style.css
+++ b/style.css
@@ -54,3 +54,86 @@ nav a {
 .nav-links ul li:hover::after {
   width: 100%;
 }
+
+.text-box {
+  width: 90%;
+  color: azure;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.text-box h1 {
+  font-size: 48px;
+}
+
+.text-box p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 19.5px;
+  margin: 15px 0 40px;
+  color: beige;
+}
+
+.hero-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: aliceblue;
+  border: 1.3px solid #ffff;
+  padding: 5px;
+  font-size: 14px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
+}
+
+.hero-btn:hover {
+  border: 1px solid rgb(253, 73, 73);
+  color: tomato;
+  transition: 1.4s;
+}
+
+nav .fa-solid {
+  display: none;
+}
+
+@media (max-width: 765px) {
+  nav a {
+    margin-top: 20px;
+  }
+  .text-box {
+  }
+  .text-box h1 {
+    font-size: 34px;
+  }
+  .text-box p {
+    font-size: 14px;
+  }
+  .nav-links ul li {
+    display: block;
+    margin-top: 20px;
+  }
+  .nav-links {
+    position: absolute;
+    height: 100vh;
+    width: 150px;
+    top: 0;
+    right: -150px;
+    text-align: left;
+    z-index: 2;
+    background: rgb(253, 150, 81);
+    transition: 1s;
+  }
+  nav .fa-solid {
+    color: #ffff;
+    width: auto;
+    height: auto;
+    display: block;
+    margin: 10px;
+    cursor: pointer;
+  }
+  .nav-links ul {
+    padding: 10px;
+  }
+}
